teams-svc/k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: teams
  namespace: micronaut-k8s
  labels:
    app: teams
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teams
  template:
    metadata:
      name: teams-svc
      labels:
        app: teams
    spec:
      containers:
        - name: teams-svc
          image: 'wpfeiffe/teams-svc:0.0.1'
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          imagePullPolicy: Always
