teams-svc/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: teams-svc
  namespace: micronaut-k8s
spec:
  ports:
    - name: teams-svc
      port: 8080
      targetPort: 8080
  selector:
    app: teams-svc
  type: NodePort
  sessionAffinity: None
